2008-07-21  Andreas Kupries <andreask@activestate.com>

	* generic/tclBasic.c: Extended the existing TIP #280 system (info
	* generic/tclCmdAH.c: frame), added the ability to track the
	* generic/tclCompCmds.c: absolute location of literal procedure
	* generic/tclCompile.c: arguments, and making this information
	* generic/tclCompile.h: available to uplevel, eval, and
	* generic/tclInterp.c: siblings. This allows proper tracking of
	* generic/tclInt.h: absolute location through custom (Tcl-coded)
	* generic/tclNamesp.c: control structures based on uplevel, etc.
	* generic/tclProc.c:
	* tests/info.test:

2007-02-22  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/*.c: fix [2021443] inconsistant "wrong # args" messages
	* win/tclWinReg.c
	* win/tclWinTest.c
	* tests/*.test

2008-07-21  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	TIP #304 IMPLEMENTATION

	* generic/tcl.decls:	public API
	* generic/tclIOCmds.c:	generic part
	* unix/tclUnixPipe.c:	OS part
	* win/tclWinPipe.c:	OS part
	* tests/chan.test:	[chan pipe] tests
	* tests/ioCmd.test:	modernized checks
	* tests/ioTrans.test:

2008-07-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tclFCmd.c: Inodes on windows are unreliable [Bug 2015723]
	* tests/winFCmd.test: test rename with inode collision

2008-07-21  Miguel Sofer  <msofer@users.sf.net>

	* generic/tcl.decls:      Changed the implementation of    
	* generic/tclBasic.c:     [namespace import]; removed
	* generic/tclDecls.h:     Tcl_NRObjProc, replaced with
	* generic/tclExecute.c:   Tcl_NRCmdSwap (proposed public
	* generic/tclInt.h:       NRE API). This should fix 
	* generic/tclNRE.h:       [Bug 582506].
	* generic/tclNamesp.c:
	* generic/tclStubInit.c:  
	
	* generic/tclBasic.c:    NRE: enabled calling NR commands 
	* generic/tclExecute.c:  from the callbacks. Completely
	* generic/tclInt.h:      redone tailcall implementation
	* generic/tclNRE.h:      using the new feature. [Bug 2021489] 
	* generic/tclProc.c:
	* tests/NRE.test: