@@ -1094,6 +1094,8 @@ typedef struct CmdFrame {
     int type;			/* Values see below. */
     int level;			/* #Frames in stack, prevent O(n) scan of
 				 * list. */
+    int numLevels;              /* value of interp's numLevels when the frame
+				 * was pushed */
     int *line;			/* Lines the words of the command start on. */
     int nline;
 
